@@ -258,7 +258,10 @@
 #		"data eof" requests will be tempfailed.  SMTP banners will
 #		be delayed as per the TARPIT timing variables.
 #
-#FAILED_RCPT_PUNISHMENT		[ TEMPFAIL | TARPIT ]
+# DISCONNECT	Hang up immediately.  This mode is most useful for testing
+#		purposes.
+#
+#FAILED_RCPT_PUNISHMENT		[ TEMPFAIL | TARPIT | DISCONNECT ]
 
 # If WAIT_SECONDS is non-zero, pause before the SMTP banner.  If the client
 # attempts to write before reading the banner, it is punished with the banner
